--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -7,7 +7,7 @@
 
 @font-face {
     font-family: "inter";
-    src: url("../fonts/Inter-VariableFont_slnt,wght.ttf");
+    src: url("../fonts/Inter/Inter-VariableFont_slnt,wght.ttf");
 }
 
 @font-face {
@@ -38,4 +38,5 @@
     /* brand fonts */
     --main-font: "inter"; 
     --accent-font: "poppins";
+    --logo-size: 200px;
 }
