--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,7 @@ header {
     align-items: center;
 
     .pics {
+      display: flex;
       flex-direction: row;
       flex-wrap: wrap;
       object-fit: cover;
